[gd_scene load_steps=10 format=3 uid="uid://dar8a1sunhcmy"]

[ext_resource type="Texture2D" uid="uid://frp5s5r66fv" path="res://assets/sprites/world_tileset.png" id="1_1ue1u"]
[ext_resource type="Script" path="res://scripts/brittle_platform.gd" id="1_ccaj0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w2yq0"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kd7qx"]
size = Vector2(16, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7tdp"]
atlas = ExtResource("1_1ue1u")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmx5q"]
atlas = ExtResource("1_1ue1u")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f6bv"]
atlas = ExtResource("1_1ue1u")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqshm"]
atlas = ExtResource("1_1ue1u")
region = Rect2(128, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nx0b5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7tdp")
}],
"loop": true,
"name": &"idle",
"speed": 0.1
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmx5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f6bv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqshm")
}, {
"duration": 0.01,
"texture": null
}],
"loop": false,
"name": &"start",
"speed": 6.0
}]

[node name="BrittlePlatform" type="StaticBody2D"]
script = ExtResource("1_ccaj0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_w2yq0")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_kd7qx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
sprite_frames = SubResource("SpriteFrames_nx0b5")
animation = &"start"
autoplay = "idle"
frame = 2
frame_progress = 0.22452

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
